# RAG-Postgres-Ollama

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: frontend.py  main.py  models.py
app/api/: routes.py
app/db/: vector_store.py
app/rag/: chunking.py  docling_client.py  embedding.py  retrieval.py  storage.py
app/utils/: logger.py
