[project]
name = "rag-postgres-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.31",
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.25",
    "ollama>=0.5.1",
    "pgvector>=0.4.1",
    "plotly>=6.1.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
]
